deploy/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: insights-on-prem
  labels:
    name: insights-on-prem
