deploy/08-insights.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insights-on-prem
  namespace: insights-on-prem
spec:
  replicas: 1
  template:
    metadata:
      name: insights-on-prem
      labels:
        app: insights-on-prem
    spec:
      terminationGracePeriodSeconds: 300
      serviceAccountName: insights-on-prem
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: insights-on-prem
        image: quay.io/ccxdev/insights-on-premise-poc:latest
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
          limits:
            cpu: 500m
            memory: 2Gi
        livenessProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: server-cert
          mountPath: /tls
          readOnly: true
        - name: client-ca
          mountPath: /tls/client-ca
          readOnly: true
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: server-cert
        secret:
          secretName: insights-on-prem-server-tls
      - name: client-ca
        secret:
          secretName: insights-on-prem-client-ca
          items:
          - key: tls.crt
            path: ca.crt
      - name: tmp
        emptyDir: {}
      imagePullSecrets:
      - name: ccxdev-insights-on-prem-pull-secret
  selector:
    matchLabels:
      app: insights-on-prem
