deploy/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: insights-on-prem
  namespace: insights-on-prem-poc
spec:
  selector:
    app: insights-on-prem
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
    name: https
  type: ClusterIP
