deploy/06-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: insights-on-prem
  namespace: insights-on-prem-poc
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
  to:
    kind: Service
    name: insights-on-prem
